# f1-race-podium-predictor

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
dashboard/: index.html
data/raw/: circuits.csv  constructors.csv  drivers.csv  qualifying.csv  races.csv  results.csv
docs/: ARCHITECTURE.md  DATA_CARD.md  DECISIONS.md  MODEL_CARD.md
examples/: latest-race-ranking.csv  prediction-request.json  prediction-response.json
reports/: metrics-summary.json
scripts/: generate_examples.py  generate_reports.py  generate_sample_data.py  train.py
sql/: analysis.sql
src/f1_podium/: __init__.py  api.py  cli.py  config.py  data.py  evaluation.py  features.py  model.py  reporting.py  training.py
tests/: __init__.py  test_api.py  test_cli.py  test_data.py  test_evaluation.py  test_features.py  test_model.py  test_training.py
