[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "f1-race-podium-predictor"
version = "1.0.0"
description = "Leakage-safe Formula 1 podium probability prediction"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "Divya Dhole"}]
dependencies = [
  "fastapi>=0.115,<1",
  "joblib>=1.4,<2",
  "matplotlib>=3.9,<4",
  "numpy>=2,<3",
  "pandas>=2.2,<3",
  "pydantic>=2.9,<3",
  "scikit-learn>=1.5,<2",
  "seaborn>=0.13,<1",
  "uvicorn>=0.30,<1"
]

[project.optional-dependencies]
dev = ["httpx>=0.27,<1", "pytest>=8.3,<9", "pytest-cov>=5,<7", "ruff>=0.7,<1"]

[project.scripts]
f1-podium = "f1_podium.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]
filterwarnings = ["ignore:Using `httpx` with `starlette.testclient` is deprecated", "ignore:Setting the shape on a NumPy array has been deprecated", "ignore:Could not find the number of physical cores:UserWarning"]

[tool.coverage.run]
omit = ["src/f1_podium/reporting.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

